--- a/lib/locales/zh-TW.yml
+++ b/lib/locales/zh-TW.yml
@@ -17,11 +17,35 @@ zh-TW:
         - "#{street_name} #{building_number} 號"
       default_country: [台灣]
 
+    lorem:
+      words: ["聯", "合", "國", "制", "訂", "的", "世", "界", "新", "聞", "自", "由", "日", "然", "而", "根", "據", "之", "家", "發", "佈", "全", "球", "報", "告", "於", "立", "法", "控", "言", "論", "記", "者", "遭", "綁", "架", "及", "謀", "殺", "財", "團", "壟", "斷", "媒", "體", "政", "令", "宣", "傳", "增", "多", "等", "事", "件", "頻", "度", "來", "到", "年", "最", "低", "點", "研", "究", "指", "出", "台", "灣", "在", "亞", "洲", "首", "屈", "一", "對", "中", "議", "題", "我", "審", "查", "因", "素", "仍", "有", "限", "虞", "人", "權", "前", "排", "名", "去", "時", "所", "狀", "況", "可", "說", "創", "個", "和", "地", "區", "律", "規", "範", "治", "介", "入", "產", "業", "活", "躍", "程", "標", "評", "估", "其", "為", "部", "分", "不", "顯", "示", "包", "括", "香", "港", "泰", "希", "臘", "冰", "島", "南", "非", "急", "遽", "下", "降", "也", "問", "僅", "戰", "亂", "雖", "被", "元", "且", "能", "效", "監", "督", "府", "失", "場", "極", "端", "常", "面", "臨", "間", "接", "影", "響", "使", "得", "主", "流", "建", "旨", "提", "高", "意", "識", "並", "醒", "尊", "重", "升", "網", "站", "今", "教", "科", "文", "組", "織", "關", "注", "第", "技", "與", "商", "速", "展", "過", "應", "供", "獨", "正", "確", "優", "質", "導", "二", "視", "性", "別", "平", "決", "策", "力", "女", "占", "少", "數", "三", "位", "代", "身", "安", "華", "化", "古", "典", "學", "翻", "譯", "諾", "貝", "爾", "獎", "終", "委", "瑞", "漢", "馬", "悅", "澳", "門", "局", "邀", "演", "講", "他", "向", "當", "透", "露", "大", "陸", "用", "簡", "字", "歷", "史", "連", "結", "感", "惜", "相", "信", "幾", "十", "後", "會", "捨", "棄", "現", "歲", "是", "奬", "唯", "精", "通", "語", "退", "休", "曾", "長", "期", "擔", "任", "斯", "德", "哥", "摩", "系", "上", "週", "末", "赴", "表", "廣", "電", "訪", "未", "很", "看", "好", "都", "反", "們", "已", "悔", "解", "釋", "承", "要", "懂", "致", "層", "小", "孩", "子", "本", "沒", "辦", "讀", "1", "9", "8", "以", "作", "品", "了", "書", "寫", "將", "回", "歸", "這", "近", "選", "行", "健", "莫", "兩", "還", "就", "欠", "缺", "才", "難", "走", "際", "更", "愈", "外", "版", "社", "願", "歐", "著", "東", "西", "方", "佔", "%", "海", "內", "匯", "集", "召", "開", "討", "如", "何", "桃", "花", "源", "詩", "經", "楚", "辭", "唐", "民", "歌", "樂", "詞", "起", "工", "堅", "光", "明", "趙", "俊", "專", "從", "道", "糟", "恩", "師", "席", "話", "定", "投", "路", "成", "李", "銳", "余", "蘇", "童", "曹", "乃", "謙", "閻", "引", "許", "錯", "誤", "情", "充", "量", "只", "逾", "九", "旬", "妻", "微", "序", "推", "薦", "己", "頒", "給", "又", "讓", "加", "冕", "桂", "冠", "壇", "利", "益", "迴", "避", "爭"]
+      term:
+        - "#{words}#{words}"
+      supplemental: [的, 了, 與, 有, 和, 以, 於, 同, 及, 並, 且, 但, 而]
+      punctuation_end: ["？", "！", "。", "。", "。", "。", "。"]
+      punctuation_connect: ["; ", "！", "，", "，", "，", "，", "，"]
+      separator: ""
+      duplicator: 2
 
     name:
       last_name: [趙, 錢, 孫, 李, 周, 吳, 鄭, 王, 馮, 陳, 褚, 衛, 蔣, 沈, 韓, 楊, 朱, 秦, 尤, 許, 何, 呂, 施, 張, 孔, 曹, 嚴, 華, 金, 魏, 陶, 薑, 戚, 謝, 鄒, 喻, 柏, 水, 竇, 章, 雲, 蘇, 潘, 葛, 奚, 範, 彭, 郎, 魯, 韋, 昌, 馬, 苗, 鳳, 花, 方, 俞, 任, 袁, 柳, 酆, 鮑, 史, 唐, 費, 廉, 岑, 薛, 雷, 賀, 倪, 湯, 滕, 殷, 羅, 畢, 郝, 鄔, 安, 常, 樂, 於, 時, 傅, 皮, 卞, 齊, 康, 伍, 餘, 元, 蔔, 顧, 孟, 平, 黃, 和, 穆, 蕭, 尹, 姚, 邵, 湛, 汪, 祁, 毛, 禹, 狄, 米, 貝, 明, 臧, 計, 伏, 成, 戴, 談, 宋, 茅, 龐, 熊, 紀, 舒, 屈, 項, 祝, 董, 梁, 杜, 阮, 藍, 閔, 席, 季, 麻, 強, 賈, 路, 婁, 危, 江, 童, 顏, 郭, 梅, 盛, 林, 刁, 鍾, 徐, 邱, 駱, 高, 夏, 蔡, 田, 樊, 胡, 淩, 霍, 虞, 萬, 支, 柯, 昝, 管, 盧, 莫, 柯, 房, 裘, 繆, 幹, 解, 應, 宗, 丁, 宣, 賁, 鄧, 鬱, 單, 杭, 洪, 包, 諸, 左, 石, 崔, 吉, 鈕, 龔, 程, 嵇, 邢, 滑, 裴, 陸, 榮, 翁, 荀, 羊, 于, 惠, 甄, 曲, 家, 封, 芮, 羿, 儲, 靳, 汲, 邴, 糜, 松, 井, 段, 富, 巫, 烏, 焦, 巴, 弓, 牧, 隗, 山, 穀, 車, 侯, 宓, 蓬, 全, 郗, 班, 仰, 秋, 仲, 伊, 宮, 甯, 仇, 欒, 暴, 甘, 鈄, 曆, 戎, 祖, 武, 符, 劉, 景, 詹, 束, 龍, 葉, 幸, 司, 韶, 郜, 黎, 薊, 溥, 印, 宿, 白, 懷, 蒲, 邰, 從, 鄂, 索, 鹹, 籍, 賴, 卓, 藺, 屠, 蒙, 池, 喬, 陽, 鬱, 胥, 能, 蒼, 雙, 聞, 莘, 党, 翟, 譚, 貢, 勞, 逄, 姬, 申, 扶, 堵, 冉, 宰, 酈, 雍, 卻, 璩, 桑, 桂, 濮, 牛, 壽, 通, 邊, 扈, 燕, 冀, 浦, 尚, 農, 溫, 別, 莊, 晏, 柴, 瞿, 閻, 充, 慕, 連, 茹, 習, 宦, 艾, 魚, 容, 向, 古, 易, 慎, 戈, 廖, 庾, 終, 暨, 居, 衡, 步, 都, 耿, 滿, 弘, 匡, 國, 文, 寇, 廣, 祿, 闕, 東, 歐, 殳, 沃, 利, 蔚, 越, 夔, 隆, 師, 鞏, 厙, 聶, 晁, 勾, 敖, 融, 冷, 訾, 辛, 闞, 那, 簡, 饒, 空, 曾, 毋, 沙, 乜, 養, 鞠, 須, 豐, 巢, 關, 蒯, 相, 查, 後, 荊, 紅, 遊, 竺, 權, 逮, 盍, 益, 桓, 公, 萬俟, 司馬, 上官, 歐陽, 夏侯, 諸葛, 聞人, 東方, 赫連, 皇甫, 尉遲, 公羊, 澹台, 公冶, 宗政, 濮陽, 淳于, 單於, 太叔, 申屠, 公孫, 仲孫, 軒轅, 令狐, 徐離, 宇文, 長孫, 慕容, 司徒, 司空]
       first_name: [怡君, 欣怡, 雅雯, 心怡, 志豪, 雅婷, 雅惠, 家豪, 雅玲, 靜怡, 志偉, 俊宏, 建宏, 佩君, 怡婷, 淑芬, 靜宜, 俊傑, 怡如, 家銘, 佳玲, 慧君, 怡伶, 雅芳, 宗翰, 志宏, 淑娟, 信宏, 志強, 淑婷, 佩珊, 佳慧, 佳蓉, 佳穎, 淑惠, 智偉, 欣儀, 嘉玲, 雅慧, 惠雯, 玉婷, 惠如, 惠君, 宜芳, 惠婷, 淑華, 志明, 雅芬, 家榮, 俊賢, 俊豪, 慧玲, 嘉宏, 佩芬, 佳樺, 雅琪, 淑萍, 淑君, 婉婷, 佳琪, 韻如, 詩婷, 建良, 芳儀, 宜君, 佩蓉, 志銘, 雅鈴, 建文, 佩玲, 鈺婷, 雅萍, 立偉, 文傑, 慧如, 淑慧, 佳宏, 志遠, 靜儀, 惠玲, 淑玲, 美君, 怡慧, 千慧, 馨儀, 嘉慧, 家瑋, 美慧, 美玲, 建志, 宗憲, 筱婷, 靜雯, 雅君, 彥廷, 怡靜, 玉玲, 郁婷, 俊男]
       name:
         - "#{last_name}#{first_name}"
+      prefix: []
+      suffix: [先生, 太太, 小姐, 女士, 博士]
+      title:
+        descriptor: [資深, 產品, 企業, 未來, 地區, 亞洲, 全球, 顧客, 投資, 國際]
+        level: [計畫, 品牌, 安全, 研究, 市場, 功能, 策略, 族群, 分支, 優化, 網路, 品質, 會計, 資料, 創意]
+        job: [組長, 課長, 協理, 主任, 科長, 經理, 工程師, 建築師, 分析師, 設計師, 秘書, 創辦人, 監製, 顧問, 助手, 特派員, 代表]
+
     phone_number:
-      formats: ['###-########', '####-########', '###########']
+      formats: ['##########']
+
+    company:
+      prefix: ["香港商", "美商", "英屬開曼群島商", "", "", "", ""]
+      suffix: [工作室, 有限公司, 股份有限公司]
+      bs:
+        - ["雲端", "高科技", "小確幸", "國際"]
+      name:
+        - "#{prefix}#{Lorem.term}#{suffix}"
