--- a/lib/locales/zh-TW.yml
+++ b/lib/locales/zh-TW.yml
@@ -3,20 +3,21 @@ zh-TW:
   faker:
     separator: '與'
     address:
-      city_prefix: [新, 竹, 竹, 新, 關, 峨, 寶, 北, 橫, 芎, 湖, 新, 尖, 五, 苗, 苗, 通, 苑, 竹, 頭, 後, 卓, 西, 頭, 公, 銅, 三, 造, 三, 南, 大, 獅, 泰, 彰, 彰, 員, 和, 鹿, 溪, 二, 田, 北, 花, 芬, 大, 永, 伸, 線, 福, 秀, 埔, 埔, 大, 芳, 竹, 社, 二, 田, 埤, 溪, 南, 南, 埔, 草, 竹, 集, 名, 鹿, 中, 魚, 國, 水, 信, 仁, 雲, 斗, 斗, 虎, 西, 土, 北, 莿, 林, 古, 大, 崙, 二, 麥, 臺, 東, 褒, 四, 口, 水, 元, 嘉, 太, 朴, 布, 大, 民, 溪, 新, 六, 東, 義, 鹿, 水, 中, 竹, 梅, 番, 大, 阿, 屏, 屏, 潮, 東, 恆, 萬, 長, 麟, 九, 里, 鹽, 高, 萬, 內, 竹, 新, 枋, 新, 崁, 林, 南, 佳, 琉, 車, 滿, 枋, 霧, 瑪, 泰, 來, 春, 獅, 牡, 三, 宜, 宜, 羅, 蘇, 頭, 礁, 壯, 員, 冬, 五, 三, 大, 南, 花, 花, 鳳, 玉, 新, 吉, 壽, 秀, 光, 豐, 瑞, 萬, 富, 卓, 臺, 臺, 成, 關, 長, 海, 池, 東, 鹿, 延, 卑, 金, 大, 達, 綠, 蘭, 太, 澎, 馬, 湖, 白, 西, 望, 七, 金, 金, 金, 金, 金, 烈, 烏, 連, 南, 北, 莒, 東]
-      city_suffix: [竹縣, 北市, 東鎮, 埔鎮, 西鎮, 眉鄉, 山鄉, 埔鄉, 山鄉, 林鄉, 口鄉, 豐鄉, 石鄉, 峰鄉, 栗縣, 栗市, 霄鎮, 裡鎮, 南鎮, 份鎮, 龍鎮, 蘭鎮, 湖鄉, 屋鄉, 館鄉, 鑼鄉, 義鄉, 橋鄉, 灣鄉, 庄鄉, 湖鄉, 潭鄉, 安鄉, 化縣, 化市, 林鎮, 美鎮, 港鎮, 湖鎮, 林鎮, 中鎮, 斗鎮, 壇鄉, 園鄉, 村鄉, 靖鄉, 港鄉, 西鄉, 興鄉, 水鄉, 心鄉, 鹽鄉, 城鄉, 苑鄉, 塘鄉, 頭鄉, 水鄉, 尾鄉, 頭鄉, 州鄉, 投縣, 投市, 里鎮, 屯鎮, 山鎮, 集鎮, 間鄉, 谷鄉, 寮鄉, 池鄉, 姓鄉, 里鄉, 義鄉, 愛鄉, 林縣, 六市, 南鎮, 尾鎮, 螺鎮, 庫鎮, 港鎮, 桐鄉, 內鄉, 坑鄉, 埤鄉, 背鄉, 崙鄉, 寮鄉, 西鄉, 勢鄉, 忠鄉, 湖鄉, 湖鄉, 林鄉, 長鄉, 義縣, 保市, 子市, 袋鎮, 林鎮, 雄鄉, 口鄉, 港鄉, 腳鄉, 石鄉, 竹鄉, 草鄉, 上鄉, 埔鄉, 崎鄉, 山鄉, 路鄉, 埔鄉, 里山鄉, 東縣, 東市, 州鎮, 港鎮, 春鎮, 丹鄉, 治鄉, 洛鄉, 如鄉, 港鄉, 埔鄉, 樹鄉, 巒鄉, 埔鄉, 田鄉, 埤鄉, 寮鄉, 園鄉, 頂鄉, 邊鄉, 州鄉, 冬鄉, 球鄉, 城鄉, 州鄉, 山鄉, 台鄉, 家鄉, 武鄉, 義鄉, 日鄉, 子鄉, 丹鄉, 地門鄉, 蘭縣, 蘭市, 東鎮, 澳鎮, 城鎮, 溪鄉, 圍鄉, 山鄉, 山鄉, 結鄉, 星鄉, 同鄉, 澳鄉, 蓮縣, 蓮市, 林鎮, 里鎮, 城鄉, 安鄉, 豐鄉, 林鄉, 復鄉, 濱鄉, 穗鄉, 榮鄉, 里鄉, 溪鄉, 東縣, 東市, 功鎮, 山鎮, 濱鄉, 端鄉, 上鄉, 河鄉, 野鄉, 平鄉, 南鄉, 峰鄉, 武鄉, 仁鄉, 島鄉, 嶼鄉, 麻里鄉, 湖縣, 公市, 西鄉, 沙鄉, 嶼鄉, 安鄉, 美鄉, 門縣, 城鎮, 湖鎮, 沙鎮, 寧鄉, 嶼鄉, 坵鄉, 江縣, 竿鄉, 竿鄉, 光鄉, 引鄉]
+      city_prefix: [新北, 臺北, 桃園, 臺中, 臺南, 高雄, 基隆, 新竹, 嘉義, 苗栗, 彰化, 南投, 雲林, 嘉義, 屏東, 宜蘭, 花蓮, 臺東, 澎湖, 金門, 連江]
+      city_suffix: [市, 縣]
       building_number: ['###', '##', '#']
-      street_suffix: [大道, 路, 街, 巷, 弄, 衖]
+      street_suffix: [大道, 路, 街, 巷, 路一段, 路二段, 路三段]
       postcode: ['#####']
-      state: [臺北市, 新北市, 桃園市, 臺中市, 臺南市, 高雄市, 基隆市, 新竹市, 嘉義市, 新竹縣, 竹北市, 苗栗縣, 苗栗市, 彰化縣, 彰化市, 南投縣, 南投市, 雲林縣, 斗六市, 嘉義縣, 太保市, 屏東縣, 屏東市, 宜蘭縣, 宜蘭市, 臺東縣, 臺東市, 澎湖縣, 金門縣, 連江縣]
-      state_abbr: [北, 桃, 竹, 苗, 中, 彰, 雲, 嘉, 南, 高, 屏, 東, 花, 宜, 基]
       city:
         - "#{city_prefix}#{city_suffix}"
       street_name:
-        - "#{Name.last_name}#{street_suffix}"
+        - "#{Lorem.term}#{street_suffix}"
       street_address:
         - "#{street_name} #{building_number} 號"
+      secondary_address: ['# 樓之 1', '## 樓', '# 樓']
+      time_zone: [Asia/Taipei]
       default_country: [台灣]
+      country: [台灣, 阿爾及利亞, 安哥拉, 貝南, 波札那, 英屬印度洋領地, 布吉納法索, 蒲隆地, 喀麥隆, 維德角, 中非, 查德, 葛摩, 剛果（金）, 剛果, 象牙海岸, 吉布地, 埃及, 赤道幾內亞, 厄利垂亞, 衣索比亞, 加彭, 甘比亞, 加納, 幾內亞, 幾內亞比索, 肯亞, 賴索托, 賴比瑞亞, 利比亞, 馬達加斯加, 馬拉威, 馬利, 茅利塔尼亞, 模里西斯, 馬約特, 摩洛哥, 莫三比克, 納米比亞, 尼日, 奈及利亞, 留尼旺, 盧安達, 聖海蓮娜, 聖多美普林西比, 塞內加爾, 塞席爾, 獅子山, 索馬利亞, 南非, 蘇丹, 史瓦濟蘭, 坦尚尼亞, 多哥, 突尼西亞, 烏干達, 西撒國, 尚比亞, 辛巴威, 索馬利蘭, 南蘇丹, 阿富汗, 亞美尼亞, 亞塞拜然, 巴林, 孟加拉, 不丹, 汶萊, 柬埔寨, 中國, 聖誕島, 科科斯（基林）群島, 賽普勒斯, 喬治亞, 香港, 印度, 印尼, 伊朗, 伊拉克, 以色列, 日本, 約旦, 哈薩克, 朝鮮, 韓國, 科威特, 吉爾吉斯, 寮國, 黎巴嫩, 澳門, 馬來西亞, 馬爾地夫, 蒙古, 緬甸, 尼泊爾, 阿曼, 巴基斯坦, 巴勒斯坦, 菲律賓, 卡達, 沙烏地阿拉伯, 新加坡, 斯里蘭卡, 敘利亞, 塔吉克, 泰國, 東帝汶, 土耳其, 土庫曼, 阿聯, 烏茲別克, 越南, 葉門, 阿布哈茲, 納哥諾卡拉巴克, 北賽普勒斯, 南奧塞提亞, 亞克羅提利與德凱利亞, 奧蘭群島, 阿爾巴尼亞, 安道爾, 奧地利, 白俄羅斯, 比利時, 波赫, 保加利亞, 克羅埃西亞, 捷克, 丹麥, 愛沙尼亞, 法羅群島, 芬蘭, 法國, 德國, 直布羅陀, 希臘, 根息島, 匈牙利, 冰島, 愛爾蘭, 曼島, 義大利, 澤西島, 拉脫維亞, 列支敦斯登, 立陶宛, 盧森堡, 馬其頓, 馬爾他, 摩爾多瓦, 摩納哥, 蒙特內哥羅, 荷蘭, 挪威, 波蘭, 葡萄牙, 羅馬尼亞, 俄羅斯, 聖馬利諾, 塞爾維亞, 斯洛伐克, 斯洛維尼亞, 西班牙, 瑞典, 瑞士, 烏克蘭, 英國, 梵蒂岡, 科索沃, 聶斯特河沿岸, 安圭拉, 安地卡及巴布達, 阿魯巴, 巴哈馬, 巴貝多, 貝里斯, 百慕達, 英屬維京群島, 加拿大, 蓋曼群島, 克利珀頓島, 哥斯大黎加, 古巴, 古拉索, 多米尼克, 多明尼加, 薩爾瓦多, 格陵蘭, 格瑞那達, 瓜德羅普, 瓜地馬拉, 海地, 宏都拉斯, 牙買加, 馬提尼克島, 墨西哥, 蒙哲臘, 納瓦薩島, 尼加拉瓜, 巴拿馬, 波多黎各, 聖巴泰勒米, 聖克里斯多福與尼維斯, 聖露西亞, 聖馬丁島, 聖皮埃爾和密克隆群島, 聖文森及格瑞那丁, 千里達及托巴哥, 土克凱可群島, 美國, 美屬維京群島, 聖馬丁, 波奈, 聖佑達修斯, 荷屬沙巴, 阿根廷, 玻利維亞, 巴西, 智利, 哥倫比亞, 厄瓜多, 福克蘭群島, 法屬蓋亞那, 蓋亞那, 巴拉圭, 秘魯, 蘇利南, 烏拉圭, 委內瑞拉, 美屬薩摩亞, 澳洲, 貝克群島, 庫克群島, 斐濟, 法屬玻里尼西亞, 關島, 豪蘭島, 加維斯島, 強斯頓島, 金曼礁, 吉里巴斯, 馬紹爾群島, 密克羅尼西亞, 中途島, 諾魯, 新喀里多尼亞, 紐西蘭, 紐埃, 諾福克島, 北馬利安納群島, 帛琉, 帕邁拉環礁, 巴布亞紐幾內亞, 皮特肯群島, 薩摩亞, 索羅門群島, 托克勞, 東加, 吐瓦魯, 萬那杜, 威克島, 瓦利斯和富圖納群島, 布韋島, 法屬南部領地, 赫德島和麥克唐納群島, 南喬治亞島和南桑威奇群島]
 
     lorem:
       words: ["聯", "合", "國", "制", "訂", "的", "世", "界", "新", "聞", "自", "由", "日", "然", "而", "根", "據", "之", "家", "發", "佈", "全", "球", "報", "告", "於", "立", "法", "控", "言", "論", "記", "者", "遭", "綁", "架", "及", "謀", "殺", "財", "團", "壟", "斷", "媒", "體", "政", "令", "宣", "傳", "增", "多", "等", "事", "件", "頻", "度", "來", "到", "年", "最", "低", "點", "研", "究", "指", "出", "台", "灣", "在", "亞", "洲", "首", "屈", "一", "對", "中", "議", "題", "我", "審", "查", "因", "素", "仍", "有", "限", "虞", "人", "權", "前", "排", "名", "去", "時", "所", "狀", "況", "可", "說", "創", "個", "和", "地", "區", "律", "規", "範", "治", "介", "入", "產", "業", "活", "躍", "程", "標", "評", "估", "其", "為", "部", "分", "不", "顯", "示", "包", "括", "香", "港", "泰", "希", "臘", "冰", "島", "南", "非", "急", "遽", "下", "降", "也", "問", "僅", "戰", "亂", "雖", "被", "元", "且", "能", "效", "監", "督", "府", "失", "場", "極", "端", "常", "面", "臨", "間", "接", "影", "響", "使", "得", "主", "流", "建", "旨", "提", "高", "意", "識", "並", "醒", "尊", "重", "升", "網", "站", "今", "教", "科", "文", "組", "織", "關", "注", "第", "技", "與", "商", "速", "展", "過", "應", "供", "獨", "正", "確", "優", "質", "導", "二", "視", "性", "別", "平", "決", "策", "力", "女", "占", "少", "數", "三", "位", "代", "身", "安", "華", "化", "古", "典", "學", "翻", "譯", "諾", "貝", "爾", "獎", "終", "委", "瑞", "漢", "馬", "悅", "澳", "門", "局", "邀", "演", "講", "他", "向", "當", "透", "露", "大", "陸", "用", "簡", "字", "歷", "史", "連", "結", "感", "惜", "相", "信", "幾", "十", "後", "會", "捨", "棄", "現", "歲", "是", "奬", "唯", "精", "通", "語", "退", "休", "曾", "長", "期", "擔", "任", "斯", "德", "哥", "摩", "系", "上", "週", "末", "赴", "表", "廣", "電", "訪", "未", "很", "看", "好", "都", "反", "們", "已", "悔", "解", "釋", "承", "要", "懂", "致", "層", "小", "孩", "子", "本", "沒", "辦", "讀", "以", "作", "品", "了", "書", "寫", "將", "回", "歸", "這", "近", "選", "行", "健", "莫", "兩", "還", "就", "欠", "缺", "才", "難", "走", "際", "更", "愈", "外", "版", "社", "願", "歐", "著", "東", "西", "方", "佔", "%", "海", "內", "匯", "集", "召", "開", "討", "如", "何", "桃", "花", "源", "詩", "經", "楚", "辭", "唐", "民", "歌", "樂", "詞", "起", "工", "堅", "光", "明", "趙", "俊", "專", "從", "道", "糟", "恩", "師", "席", "話", "定", "投", "路", "成", "李", "銳", "余", "蘇", "童", "曹", "乃", "謙", "閻", "引", "許", "錯", "誤", "情", "充", "量", "只", "逾", "九", "旬", "妻", "微", "序", "推", "薦", "己", "頒", "給", "又", "讓", "加", "冕", "桂", "冠", "壇", "利", "益", "迴", "避", "爭"]
@@ -33,7 +34,7 @@ zh-TW:
       first_name: [怡君, 欣怡, 雅雯, 心怡, 志豪, 雅婷, 雅惠, 家豪, 雅玲, 靜怡, 志偉, 俊宏, 建宏, 佩君, 怡婷, 淑芬, 靜宜, 俊傑, 怡如, 家銘, 佳玲, 慧君, 怡伶, 雅芳, 宗翰, 志宏, 淑娟, 信宏, 志強, 淑婷, 佩珊, 佳慧, 佳蓉, 佳穎, 淑惠, 智偉, 欣儀, 嘉玲, 雅慧, 惠雯, 玉婷, 惠如, 惠君, 宜芳, 惠婷, 淑華, 志明, 雅芬, 家榮, 俊賢, 俊豪, 慧玲, 嘉宏, 佩芬, 佳樺, 雅琪, 淑萍, 淑君, 婉婷, 佳琪, 韻如, 詩婷, 建良, 芳儀, 宜君, 佩蓉, 志銘, 雅鈴, 建文, 佩玲, 鈺婷, 雅萍, 立偉, 文傑, 慧如, 淑慧, 佳宏, 志遠, 靜儀, 惠玲, 淑玲, 美君, 怡慧, 千慧, 馨儀, 嘉慧, 家瑋, 美慧, 美玲, 建志, 宗憲, 筱婷, 靜雯, 雅君, 彥廷, 怡靜, 玉玲, 郁婷, 俊男]
       name:
         - "#{last_name}#{first_name}"
-      prefix: []
+      prefix: [""]
       suffix: [先生, 太太, 小姐, 女士, 博士]
       title:
         descriptor: [資深, 產品, 企業, 未來, 地區, 亞洲, 全球, 顧客, 投資, 國際]
@@ -58,3 +59,7 @@ zh-TW:
         adjective: [迷你, 符合人體工程學, 智慧型, 時尚, 雲端, 公益, 極簡, 北歐設計, 手感, 設計師, 經典, 台灣設計, 台灣製造, 原創]
         material: [不鏽鋼, 木頭, 水泥, 塑膠, 石頭]
         product: [椅子, 腳踏車, 滑板, 音響, 手錶, 戒指, 項鍊, 明信片, 電風扇, 檯燈, 桌子, "3D 印表機", 工具組]
+
+    internet:
+      free_email: [gmail.com, yahoo.com, hotmail.com, yahoo.com.tw, pchome.com.tw, msa.hinet.net]
+      domain_suffix: [com, com.tw, tw]
